k8s/ingress/ingress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: itam-ingress-loadbalancer
  namespace: it-asset-management
spec:
  type: LoadBalancer
  selector:
    app: itam-ingress
  ports:
    - port: 8000
      targetPort: 80
