k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-asset-management-ingress
  namespace: it-asset-management
spec:
  rules:
    - host: itam.arinco.net
      http:
        paths:
          - path: /api/wms/order
            pathType: Prefix
            backend:
              service:
                name: order-service-svc
                port:
                  number: 80
          - path: /api/usr/management
            pathType: Prefix
            backend:
              service:
                name: user-service-svc
                port:
                  number: 80
          - path: /api/usr/auth
            pathType: Prefix
            backend:
              service:
                name: authentication-svc
                port:
                  number: 80
          - path: /api/wms/inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service-svc
                port:
                  number: 80
